--- a/index.html
+++ b/index.html
@@ -228,18 +228,18 @@ function myFunction10() {
 	<!--<hr style="height:1px;border-width:0;color:gray;background-color:gray"> --><section id="overview" class="parallax-section"> 
 	<!--<center><h2 class="wow bounceIn"><table><tr><td align="right"><span style="color:#4267b2; font-size:30px">You currently own : </span></td><td> <span style="color:black; font-size:30px" id="price2"></span><span style="color:black; font-size:30px"></span></td></tr><tr><td align="right"><span style="font-size:30px">1 gram of virtualgold : </span></td><td> <span style="color:#4267b2; font-size:30px" id="price"></span><span style="color:#4267b2;font-size:30px"> </span></span></td></tr><tr><td align="right"><span style="color:#4267b2; style="font-size:30px">Value of holdings :</span></td><td><span style="font-size:30px"id="price3"> </span></span></td></tr></table><br></div></center></h3><br><br><br><br><hr style="height:0.5px;border-width:0;color:gray;background-color:black"><br>-->
 	<div style="padding-top: 0px"><div class="container" style="padding-top: 0px">
-		<h1>$OWN is the native token of the opinion wars protocol. It isnt live yet, token Presale Begins: 3rd December 2023</h1>
+		<h3>$OWN is the native token of the Opinion Wars protocol. Presale Begins: 3rd December 2023</h3>
 		<hr style="height:1px;border-width:0;color:gray;background-color:gray">
 	<p style="display: inline-block">$OWN is a fundamentally new kind of cryptocurrency that uses an innovative design to possibly one of the most lucrative token ever created!<span style="color:SlateBlue;"> Countdown for Launch:</span></p>
-		<button onclick="myFunction10()" id="myBtn10" class="btn btn-lg btn-default" style="background-color:#d4af37;">Read Goldpaper</button>
-	<span id = "dots10"></span> 
+	<h1>3d 10h 45m</h1>
+	<span id = "dots10"><button onclick="myFunction10()" id="myBtn10" class="btn btn-lg btn-default" style="background-color:#d4af37;">Read Goldpaper</button></span> 
 	<span id ="more10">
-	<a href="goldpaper.pdf" download="goldpaper" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="13.5s">Info on the Opinion Wars protocol</a>
-	<a href="#overview" class="btn btn-lg btn-danger smoothScroll wow fadeIn" data-wow-delay="10.5s">What makes $OWN token different</a>
-	<a href="https://t.me/VirtualGoldOfficial" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="13.5s">How to participate in presale</a>
-	<a href="goldpaper.pdf" download="goldpaper" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="13.5s">Download Whitepaper</a>
-	<a href="#overview" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="10.5s">Join the official Opinion Wars Telegram Group</a>
-	<a href="https://t.me/VirtualGoldOfficial" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="13.5s">Risks & Disclaimer</a>
+	<a href="goldpaper.pdf" download="goldpaper" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">Info on the Opinion Wars protocol</a>
+	<a href="#overview" class="btn btn-lg btn-danger smoothScroll wow fadeIn" data-wow-delay="1.05s">What makes $OWN token different</a>
+	<a href="https://t.me/VirtualGoldOfficial" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">How to participate in presale</a>
+	<a href="goldpaper.pdf" download="goldpaper" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">Download Whitepaper</a>
+	<a href="#overview" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.05s">Join the official Opinion Wars Telegram Group</a>
+	<a href="https://t.me/VirtualGoldOfficial" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">Risks & Disclaimer</a>
 	</span>
 	<hr style="height:1px;border-width:0;color:gray;background-color:gray">
 		
