--- a/index.html
+++ b/index.html
@@ -230,10 +230,11 @@ function myFunction10() {
 	<div style="padding-top: 0px"><div class="container" style="padding-top: 0px">
 		<h3>$OWN is the native token of the Opinion Wars protocol. Presale Begins: 3rd December 2023</h3>
 		<hr style="height:1px;border-width:0;color:gray;background-color:gray">
-	<p style="display: inline-block">$OWN is a fundamentally new kind of cryptocurrency that uses an innovative design to possibly one of the most lucrative token ever created!<span style="color:SlateBlue;"> Countdown for Launch:</span></p>
+	<p style="display: inline-block">Quite possibly one of the most lucrative tokens ever created!<span style="color:SlateBlue;"> Countdown for Launch:</span></p>
 	<h1>3d 10h 45m</h1>
 	<span id = "dots10"><button onclick="myFunction10()" id="myBtn10" class="btn btn-lg btn-default" style="background-color:#d4af37;">Read Goldpaper</button></span> 
-	<span id ="more10">
+	<span id ="more10"><br>
+	<style="display: inline-block">Unlike other native/governance tokens $OWN been specifically designed to maximize asset appreciation, especially for early holders: See below for more info on how everything works: info</p>
 	<a href="goldpaper.pdf" download="goldpaper" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">Info on the Opinion Wars protocol</a>
 	<a href="#overview" class="btn btn-lg btn-danger smoothScroll wow fadeIn" data-wow-delay="1.05s">What makes $OWN token different</a>
 	<a href="https://t.me/VirtualGoldOfficial" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">How to participate in presale</a>
