--- a/index.html
+++ b/index.html
@@ -229,10 +229,8 @@ function myFunction10() {
 	<!--<center><h2 class="wow bounceIn"><table><tr><td align="right"><span style="color:#4267b2; font-size:30px">You currently own : </span></td><td> <span style="color:black; font-size:30px" id="price2"></span><span style="color:black; font-size:30px"></span></td></tr><tr><td align="right"><span style="font-size:30px">1 gram of virtualgold : </span></td><td> <span style="color:#4267b2; font-size:30px" id="price"></span><span style="color:#4267b2;font-size:30px"> </span></span></td></tr><tr><td align="right"><span style="color:#4267b2; style="font-size:30px">Value of holdings :</span></td><td><span style="font-size:30px"id="price3"> </span></span></td></tr></table><br></div></center></h3><br><br><br><br><hr style="height:0.5px;border-width:0;color:gray;background-color:black"><br>-->
 	<div style="padding-top: 0px"><div class="container" style="padding-top: 0px">
 		<h3>$OWN is the native token of the Opinion Wars protocol. Presale Begins: 3rd December 2023</h3>
-		<hr style="height:1px;border-width:0;color:gray;background-color:gray">
-	<p style="display: inline-block">Quite possibly one of the most lucrative tokens ever created!<span style="color:SlateBlue;"> Countdown for Launch:</span></p>
-	<h1>3d 10h 45m</h1>
-	<span id = "dots10"><button onclick="myFunction10()" id="myBtn10" class="btn btn-lg btn-default" style="background-color:#d4af37;">Read Goldpaper</button></span> 
+	<p style="display: inline-block">Quite possibly one of the most lucrative tokens ever created!<span style="color:SlateBlue;"><span id = "dots10"><button onclick="myFunction10()" id="myBtn10" class="btn btn-lg btn-default" style="background-color:#d4af37;">Learn More</button></span></span></p>
+	
 	<span id ="more10"><br>
 	<style="display: inline-block">Unlike other native/governance tokens $OWN been specifically designed to maximize asset appreciation, especially for early holders: See below for more info on how everything works: info</p>
 	<a href="goldpaper.pdf" download="goldpaper" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">Info on the Opinion Wars protocol</a>
@@ -242,6 +240,9 @@ function myFunction10() {
 	<a href="#overview" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.05s">Join the official Opinion Wars Telegram Group</a>
 	<a href="https://t.me/VirtualGoldOfficial" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">Risks & Disclaimer</a>
 	</span>
+	<hr style="height:1px;border-width:0;color:gray;background-color:gray">
+	<p style="display: inline-block">Below is the countdown for launch. Stay Tuned!</p>
+	<h1>3d 10h 45m</h1> 
 	<hr style="height:1px;border-width:0;color:gray;background-color:gray">
 		
 		
