--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ function myFunction10() {
 	<p style="display: inline-block">Quite possibly one of the most lucrative tokens ever created!<span style="color:SlateBlue;"><span id = "dots10"><button onclick="myFunction10()" id="myBtn10" class="btn btn-lg btn-default" style="background-color:#d4af37;">Learn More</button></span></span></p>
 	
 	<span id ="more10"><br>
-	<style="display: inline-block">Unlike other native/governance tokens $OWN been specifically designed to maximize asset appreciation, especially for early holders: See below for more info on how everything works: info</p>
+	<p style="display: inline-block">Unlike other native/governance tokens $OWN is a fundamentally new kind of cryptocurrency that has been specifically designed to maximize asset appreciation (especially for early holders). See below for more info on how everything works: info</p>
 	<a href="goldpaper.pdf" download="goldpaper" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">Info on the Opinion Wars protocol</a>
 	<a href="#overview" class="btn btn-lg btn-danger smoothScroll wow fadeIn" data-wow-delay="1.05s">What makes $OWN token different</a>
 	<a href="https://t.me/VirtualGoldOfficial" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">How to participate in presale</a>
