--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ function myFunction10() {
 	<h1>3d 10h 45m</h1> 
 	
 	<hr style="height:1px;border-width:0;color:gray;background-color:gray">
-	<p style="display: inline-block">$OWN uses a few innovative mechanisms to quite possibly one of the most lucrative tokens ever created!<span style="color:SlateBlue;"><span id = "dots10"><button onclick="myFunction10()" id="myBtn10" class="btn btn-lg btn-default" style="background-color:#d4af37;">Learn More</button></span></span></p>
+	<p style="display: inline-block">Unlike other governance tokens, $OWN uses am innovative design to quite possibly one of the most lucrative tokens ever created!<span style="color:SlateBlue;"><span id = "dots10"><button onclick="myFunction10()" id="myBtn10" class="btn btn-lg btn-default" style="background-color:#d4af37;">Learn More</button></span></span></p>
 	
 	<span id ="more10"><br>
 	<!--<p style="display: inline-block">Unlike other native/governance tokens $OWN is a fundamentally new kind of cryptocurrency that has been specifically designed to maximize asset appreciation (especially for early holders). See below for more info on how everything works: info</p> -->
