--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@ function myFunction10() {
 	<h1>3d 10h 45m</h1> 
 	
 	<hr style="height:1px;border-width:0;color:gray;background-color:gray">
-	<p style="display: inline-block">Unlike other governance tokens, $OWN uses am innovative design to quite possibly one of the most lucrative tokens ever created!<span style="color:SlateBlue;"><span id = "dots10"><button onclick="myFunction10()" id="myBtn10" class="btn btn-lg btn-default" style="background-color:#d4af37;">Learn More</button></span></span></p>
-	
+	<!-- Unlike other governance tokens, $OWN uses am innovative design to quite possibly one of the most lucrative tokens ever created! -->
+	<p style="display: inline-block">Quite possibily one of the most lucrative tokens ever created. Unlike other governance tokens OWN uses an innovative "mechanism design" to be extremely lucrative to holders, especially for the early holders<span style="color:SlateBlue;"><span id = "dots10"><button onclick="myFunction10()" id="myBtn10" class="btn btn-lg btn-default" style="background-color:#d4af37;">Learn More</button></span></span></p>
 	<span id ="more10"><br>
 	<!--<p style="display: inline-block">Unlike other native/governance tokens $OWN is a fundamentally new kind of cryptocurrency that has been specifically designed to maximize asset appreciation (especially for early holders). See below for more info on how everything works: info</p> -->
 	<a href="goldpaper.pdf" download="goldpaper" class="btn btn-lg btn-default smoothScroll wow fadeIn" data-wow-delay="1.35s">Info on the Opinion Wars protocol</a>
